Fix: When jumping to an anchor, avoid it being hidden by the navbar

--- a/html/custom.css
+++ b/html/custom.css
@@ -140,11 +140,20 @@ a:active {
     font-style: italic!important;
 }
 
-
 /* Main content */
 article {
     margin-top: 30px; /* Add a top margin to avoid content overlay */
 }
+
+/* Have links show up at a nice offset */
+/* See https://stackoverflow.com/questions/4086107/fixed-page-header-overlaps-in-page-anchors */
+:target::before {
+  content: "";
+  display: block;
+  height: 60px; /* fixed header height*/
+  margin: -60px 0 0; /* negative fixed header height */
+}
+
 
 /* CSS Menu */
 #cssmenu,
